--- a/Выравнивание с матрицей весов.ipynb
+++ b/Выравнивание с матрицей весов.ipynb
@@ -31,7 +31,7 @@
     "        Insert = F[i][j-1] + d\n",
     "        F[i][j] = max(Match, Delete, Insert)\n",
     "Align_A, Align_B = \"\", \"\"\n",
-    "while i > 0 or j > 0:\n",
+    "while i > 0 and j > 0:\n",
     "    Score, ScoreDiag,  ScoreLeft, ScoreUp = F[i][j], F[i-1][j-1], F[i][j-1], F[i-1][j]\n",
     "    if Score == ScoreDiag + S_dict[A[i-1]+B[j-1]]:\n",
     "        Align_A = A[i-1] + Align_A\n",
